syntax = "proto3";
package nicecms.media.v1;
option go_package = "github.com/modernice/nice-cms/internal/proto/gen/media/v1;protomedia";

import "common/v1/common.proto";

service MediaService {
	rpc LookupShelfByName(nicecms.common.v1.NameLookup) returns (nicecms.common.v1.LookupResp);
	rpc UploadDocument(stream UploadDocumentReq) returns (ShelfDocument);
	rpc ReplaceDocument(stream ReplaceDocumentReq) returns (ShelfDocument);

	rpc LookupGalleryByName(nicecms.common.v1.NameLookup) returns (nicecms.common.v1.LookupResp);
	rpc LookupGalleryStackByName(LookupGalleryStackByNameReq) returns (nicecms.common.v1.LookupResp);
	rpc UploadImage(stream UploadImageReq) returns (Stack);
	rpc ReplaceImage(stream ReplaceImageReq) returns (Stack);
	rpc FetchGallery(FetchGalleryReq) returns (Gallery);
}

message StorageFile {
	string name = 1;
	string disk = 2;
	string path = 3;
	int64 filesize = 4;
	repeated string tags = 5;
}

message StorageImage {
	StorageFile file = 1;
	int64 width = 2;
	int64 height = 3;
}

message StorageDocument {
	StorageFile file = 1;
}

message UploadDocumentReq {
	message UploadDocumentMetadata {
		nicecms.common.v1.UUID shelfId = 1;
		string uniqueName = 2;
		string name = 3;
		string disk = 4;
		string path = 5;
	}

	oneof upload_data {
		UploadDocumentMetadata metadata = 1;
		bytes chunk = 2;
	}
}

message ReplaceDocumentReq {
	message ReplaceDocumentMetadata {
		nicecms.common.v1.UUID shelfId = 1;
		nicecms.common.v1.UUID documentId = 2;
	}

	oneof replace_data {
		ReplaceDocumentMetadata metadata = 1;
		bytes chunk = 2;
	}
}

message Shelf {
	nicecms.common.v1.UUID id = 1;
	string name = 2;
	repeated ShelfDocument documents = 3;
}

message ShelfDocument {
  StorageDocument document = 1;
	nicecms.common.v1.UUID id = 2;
	string uniqueName = 3;
}

message LookupGalleryStackByNameReq {
	nicecms.common.v1.UUID galleryId = 1;
	string name = 2;
}

message UploadImageReq {
	message UploadImageMetadata {
		nicecms.common.v1.UUID galleryId = 1;
		string name = 2;
		string disk = 3;
		string path = 4;
	}

	oneof upload_data {
		UploadImageMetadata metadata = 1;
		bytes chunk = 2;
	}
}

message ReplaceImageReq {
	message ReplaceImageMetadata {
		nicecms.common.v1.UUID galleryId = 1;
		nicecms.common.v1.UUID stackId = 2;
	}

	oneof replace_data {
		ReplaceImageMetadata metadata = 1;
		bytes chunk = 2;
	}
}

message FetchGalleryReq {
	nicecms.common.v1.UUID id = 1;
}

message Gallery {
	nicecms.common.v1.UUID id = 1;
	string name = 2;
	repeated Stack stacks = 3;
}

message Stack {
	nicecms.common.v1.UUID id = 1;
	repeated StackImage images = 2;
}

message StackImage {
	StorageImage image = 1;
	bool original = 2;
	string size = 3;
}
